# zeal

./: .appveyor.yml  .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .drone.yml  .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .qmake.conf  .release-please-manifest.json  .shippable.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CNAME  CONTRIBUTING.md  COPYING  README.md  REUSE.toml  azure-pipelines.yml  biome.json  common.pri  docsets.txt  download.html  groups  index.html  justfile  project.config  release-please-config.json  shippable.yml  snap  usage.html  vcpkg.json  zeal.pro  zeal.spec
assets/: CMakeLists.txt  assets.pro
assets/freedesktop/: CMakeLists.txt  org.zealdocs.Zeal.appdata.xml  org.zealdocs.Zeal.appdata.xml.in  org.zealdocs.zeal.appdata.xml.in  org.zealdocs.zeal.desktop
src/: CMakeLists.txt  main.cpp  src.pro  zeal.desktop  zeal.qrc  zealdocsetmetadata.h  zealdocsetsregistry.h  zealnetworkaccessmanager.cpp
src/app/: CMakeLists.txt  app.pro  main.cpp  versioninfo.rc.in  zeal.manifest  zeal.qrc
src/app/i18n/: zeal.ts  zeal_zh_CN.ts
src/app/resources/: zeal.icns  zeal.qrc
src/app/resources/browser/: 404.html  darkmode.css  highlight.css  new-tab.html  not-found.html  start.html  welcome-noad.html  welcome.html
src/app/resources/css/: darkorange.stylesheet
src/app/resources/icons/: README.md
src/app/resources/language/: zh_CN.qm  zh_CN.ts
src/contrib/tomlplusplus/toml++/: toml.hpp
src/core/: application.cpp  application.h  core.pri  extractor.cpp  extractor.h  lcs.cpp  lcs.h  localserver.cpp  localserver.h  settings.cpp  settings.h
src/libs/: CMakeLists.txt  libs.pro
src/libs/browser/: CMakeLists.txt  searchtoolbar.cpp  searchtoolbar.h  settings.cpp  settings.h  urlrequestinterceptor.cpp  urlrequestinterceptor.h  webbridge.cpp  webbridge.h  webcontrol.cpp  webcontrol.h  webpage.cpp  webpage.h  webview.cpp  webview.h
src/libs/core/: CMakeLists.txt  application.cpp  application.h  applicationsingleton.cpp  applicationsingleton.h  core.pri  extractor.cpp  extractor.h  filemanager.cpp  filemanager.h  httpserver.cpp  httpserver.h  localserver.cpp  localserver.h  networkaccessmanager.cpp  networkaccessmanager.h  session.cpp  session.h  settings.cpp  settings.h  state.cpp  state.h
src/libs/core/tests/: CMakeLists.txt  extractor_test.cpp  session_test.cpp  state_test.cpp
src/libs/registry/: CMakeLists.txt  cancellationtoken.cpp  cancellationtoken.h  docset.cpp  docset.h  docsetmetadata.cpp  docsetmetadata.h  docsetregistry.cpp  docsetregistry.h  itemdatarole.h  listmodel.cpp  listmodel.h  registry.pri  registry.pro  searchmodel.cpp  searchmodel.h  searchquery.cpp  searchquery.h  searchresult.cpp  searchresult.h
src/libs/sidebar/: CMakeLists.txt  container.cpp  container.h  proxyview.cpp  proxyview.h  view.cpp  view.h  viewprovider.cpp  viewprovider.h
src/libs/ui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  browsertab.cpp  browsertab.h  docsetlistitemdelegate.cpp  docsetlistitemdelegate.h  docsetsdialog.cpp  docsetsdialog.h  docsetsdialog.ui  hoverpanel.cpp  hoverpanel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  progressitemdelegate.cpp  progressitemdelegate.h  searchitemdelegate.cpp  searchitemdelegate.h  searchsidebar.cpp  searchsidebar.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  sidebarviewprovider.cpp  sidebarviewprovider.h  ui.pri  ui.pro  webbridge.cpp  webbridge.h  windowmanager.cpp  windowmanager.h
src/libs/util/: CMakeLists.txt  caseinsensitivemap.h  database.cpp  database.h  fuzzy.cpp  fuzzy.h  humanizer.cpp  humanizer.h  plist.cpp  plist.h  readableinterval.cpp  readableinterval.h  sqlitedatabase.cpp  sqlitedatabase.h  statement.cpp  statement.h  tarixarchive.cpp  tarixarchive.h  util.pri  util.pro  version.cpp  version.h
src/registry/: cachingsearchstrategy.cpp  cachingsearchstrategy.h  cancellationtoken.cpp  cancellationtoken.h  docset.cpp  docset.h  docsetinfo.cpp  docsetinfo.h  docsetmetadata.cpp  docsetmetadata.h  docsetregistry.cpp  docsetregistry.h  docsetsearchstrategy.cpp  docsetsearchstrategy.h  docsetsregistry.cpp  docsetsregistry.h  docsettoken.cpp  docsettoken.h  listmodel.cpp  listmodel.h  registry.pri  rename.sh  searchmodel.cpp  searchmodel.h  searchquery.cpp  searchquery.h  searchrelevancy.cpp  searchrelevancy.h  searchresult.cpp  searchresult.h  zealdocsetsregistry.cpp  zeallistmodel.cpp  zrelevancy.cpp  zrelevancy.h
src/resources/: zeal.qrc
src/resources/browser/: start.html
src/ui/: aboutdialog.cpp  aboutdialog.h  docsetlistitemdelegate.cpp  docsetlistitemdelegate.h  icons.cpp  icons.h  mainwindow.cpp  mainwindow.h  networkaccessmanager.cpp  networkaccessmanager.h  progressitemdelegate.cpp  progressitemdelegate.h  searchitemdelegate.cpp  searchitemdelegate.h  searchitemstyle.cpp  searchitemstyle.h  settingsdialog.cpp  settingsdialog.h  ui.pri  zealsearchitemdelegate.cpp  zealsearchitemstyle.h  zealsettingsdialog.cpp  zealsettingsdialog.h
src/ui/forms/: aboutdialog.ui  mainwindow.ui  settingsdialog.ui
src/ui/widgets/: razorshortcutbutton.cpp  razorshortcutbutton_p.h  searchablewebview.cpp  searchablewebview.h  searchedit.cpp  searchedit.h  shortcutedit.cpp  shortcutedit.h  toolbarframe.cpp  toolbarframe.h  webview.cpp  webview.h  zealsearchedit.cpp  zealsearchedit.h  zealwebview.h
src/util/: plist.cpp  plist.h  version.cpp  version.h
src/webpage/: Welcome.html  main.css
zeal/quazip/: CMakeLists.txt  JlCompress.cpp  JlCompress.h  README.txt  crypt.h  ioapi.h  qioapi.cpp  quaadler32.cpp  quaadler32.h  quachecksum32.h  quacrc32.cpp  quacrc32.h  quagzipfile.cpp  quagzipfile.h  quaziodevice.cpp  quaziodevice.h  quazip.cpp  quazip.h  quazip.pri  quazip.pro  quazip.sln  quazip.vcproj  quazip.vcxproj  quazip.vcxproj.filters  quazip_global.h  quazipdir.cpp  quazipdir.h  quazipfile.cpp  quazipfile.h  quazipfileinfo.cpp  quazipfileinfo.h  quazipnewinfo.cpp  quazipnewinfo.h  run_moc.bat  unzip.c  unzip.h  zip.c  zip.h
zeal/quazip/debian/: libquazip0.symbols
zeal/quazip/doc/: faq.dox  index.dox  usage.dox
(+220 files in other folders)
